envoy/envoy-lbaas.yaml
static_resources:
  listeners:
  # HTTP listener for api.example.com
  - name: listener_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          # ВКЛЮЧАЕМ ЛОГИ ЧТОБЫ ВИДИТЬ ЗАПРОСЫ
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
                log_format:
                  json_format:
                    timestamp:           "%START_TIME%"
                    method:              "%REQ(:METHOD)%"
                    path:                "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                    protocol:            "%PROTOCOL%"
                    x_forwarded_for:     "%REQUEST_HEADER(X-FORWARDED-FOR)%"
                    user_agent:          "%REQUEST_HEADER(USER-AGENT)%"
                    upstream_host:       "%UPSTREAM_HOST%"
                    upstream_host_name:  "%UPSTREAM_HOST_NAME%"
                    host:                "%REQ(HOST)%"
                    virtual_cluster:     "%VIRTUAL_CLUSTER_NAME%"
                    route_name:          "%ROUTE_NAME%"
                    remote_port:         "%DOWNSTREAM_REMOTE_PORT%"
                    remote_address:      "%DOWNSTREAM_REMOTE_ADDRESS%"
                    protocol:            "%PROTOCOL%"
                    response_code:       "%RESPONSE_CODE%"
                    response_flags:      "%RESPONSE_FLAGS%"
                    bytes_received:      "%BYTES_RECEIVED%"
                    bytes_sent:          "%BYTES_SENT%"
                    duration:            "%DURATION%"
                    upstream_service:    "%UPSTREAM_CLUSTER%"
                    upstream_address:    "%UPSTREAM_REMOTE_ADDRESS%"


          stat_prefix: ingress_http_plain
          strip_any_host_port: true
          codec_type: AUTO
          route_config:
            name: local_route_http
            virtual_hosts:
            - name: backend_http
              domains: ["api.example.com"]
              routes:
              # Default route
              - match:
                  prefix: "/"
                route:
                  cluster: backend_service_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  # HTTPS listener
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    filter_chains:
    # Filter chain for api.example.com -> HTTP backend
#    - filter_chain_match:
#        server_names: [""]
#      # TLS configuration for HTTPS listener
    - transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: "/etc/envoy/https.crt"
              private_key:
                filename: "/etc/envoy/https.key"
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          # ВКЛЮЧАЕМ ЛОГИ ЧТОБЫ ВИДИТЬ ЗАПРОСЫ
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
                log_format:
                  json_format:
                    timestamp: "%START_TIME%"
                    method: "%REQ(:METHOD)%"
                    path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                    protocol: "%PROTOCOL%"
                    x_forwarded_for:  "%REQUEST_HEADER(X-FORWARDED-FOR)%"
                    user_agent:       "%REQUEST_HEADER(USER-AGENT)%"
                    upstream_host:    "%UPSTREAM_HOST%"
                    upstream_host_name:  "%UPSTREAM_HOST_NAME%"
                    host:                "%REQ(HOST)%"
                    virtual_cluster:  "%VIRTUAL_CLUSTER_NAME%"
                    route_name:       "%ROUTE_NAME%"
                    remote_port:      "%DOWNSTREAM_REMOTE_PORT%"
                    remote_address:   "%DOWNSTREAM_REMOTE_ADDRESS%"
                    protocol:         "%PROTOCOL%"
                    response_code:    "%RESPONSE_CODE%"
                    response_flags:   "%RESPONSE_FLAGS%"
                    bytes_received:   "%BYTES_RECEIVED%"
                    bytes_sent:       "%BYTES_SENT%"
                    duration:         "%DURATION%"
                    upstream_service: "%UPSTREAM_CLUSTER%"
                    upstream_address: "%UPSTREAM_REMOTE_ADDRESS%"

          stat_prefix: ingress_http
          strip_any_host_port: true
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend_http
              domains: ["api.example.com"]
              routes:
              # Default route
              - match:
                  prefix: "/"
                route:
                  cluster: backend_service_http
            - name: backend_https
              domains: ["apis.example.com"]
              routes:
              # Default route
              - match:
                  prefix: "/"
                route:
                  cluster: backend_service_https
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:
  # HTTP backend cluster
  - name: backend_service_http
    connect_timeout: 5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: http-server
                port_value: 8082

  # HTTPS backend cluster
  - name: backend_service_https
    connect_timeout: 5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend_service_https
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: https-server
                port_value: 8082
    # TLS configuration for upstream gRPC server
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: "/etc/envoy/ca.crt"

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
